添加定时器
Signed-off-by: sth <sth276@163.com>

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -97,7 +97,9 @@
     <servlet-name>Blacklist</servlet-name>
     <url-pattern>/servlet/Blacklist</url-pattern>
   </servlet-mapping>
-
+<listener> 
+<listener-class>pro.servlet.action.ContextListener</listener-class> 
+</listener> 
 
 	
 
