--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -54,6 +54,12 @@
 		<servlet-name>Blacklist</servlet-name>
 		<servlet-class>pro.servlet.action.Blacklist</servlet-class>
 	</servlet>
+		<servlet>
+		<description>This is the description of my J2EE component</description>
+		<display-name>This is the display name of my J2EE component</display-name>
+		<servlet-name>Alarminfo</servlet-name>
+		<servlet-class>pro.servlet.action.Alarminfo</servlet-class>
+	</servlet>
 
 
 
@@ -96,6 +102,10 @@
     <servlet-mapping>
     <servlet-name>Blacklist</servlet-name>
     <url-pattern>/servlet/Blacklist</url-pattern>
+  </servlet-mapping>
+      <servlet-mapping>
+    <servlet-name>Alarminfo</servlet-name>
+    <url-pattern>/servlet/Alarminfo</url-pattern>
   </servlet-mapping>
 <listener> 
 <listener-class>pro.servlet.action.ContextListener</listener-class> 
