--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -54,6 +54,13 @@
 		<servlet-name>Blacklist</servlet-name>
 		<servlet-class>pro.servlet.action.Blacklist</servlet-class>
 	</servlet>
+  <servlet>
+  	<description>This is the description of my J2EE component</description>
+	<display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>GetDangerousCars</servlet-name>
+    <servlet-class>pro.servlet.action.GetDangerousCars</servlet-class>
+  </servlet>
+
 
 
 
@@ -96,6 +103,10 @@
     <servlet-mapping>
     <servlet-name>Blacklist</servlet-name>
     <url-pattern>/servlet/Blacklist</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>GetDangerousCars</servlet-name>
+    <url-pattern>/servlet/GetDangerousCars</url-pattern>
   </servlet-mapping>
 
 
