--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -68,6 +68,13 @@
     <servlet-name>GetDangerousCars</servlet-name>
     <servlet-class>pro.servlet.action.GetDangerousCars</servlet-class>
   </servlet>
+  <servlet>
+  	<description>This is the description of my J2EE component</description>
+	<display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>YearReport</servlet-name>
+    <servlet-class>pro.servlet.action.YearReport</servlet-class>
+  </servlet>
+
 
 
 
@@ -108,6 +115,10 @@
     <servlet-name>WMReport</servlet-name>
     <url-pattern>/servlet/WMReport</url-pattern>
   </servlet-mapping>
+   <servlet-mapping>
+    <servlet-name>DayReport</servlet-name>
+    <url-pattern>/servlet/DayReport</url-pattern>
+  </servlet-mapping>
     <servlet-mapping>
     <servlet-name>Blacklist</servlet-name>
     <url-pattern>/servlet/Blacklist</url-pattern>
@@ -116,10 +127,15 @@
     <servlet-name>GetDangerousCars</servlet-name>
     <url-pattern>/servlet/GetDangerousCars</url-pattern>
   </servlet-mapping>
+   <servlet-mapping>
+    <servlet-name>YearReport</servlet-name>
+    <url-pattern>/servlet/YearReport</url-pattern>
+  </servlet-mapping>
       <servlet-mapping>
     <servlet-name>Alarminfo</servlet-name>
     <url-pattern>/servlet/Alarminfo</url-pattern>
   </servlet-mapping>
+ 
 <listener> 
 <listener-class>pro.servlet.action.ContextListener</listener-class> 
 </listener> 
