--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -60,6 +60,12 @@
 		<servlet-name>Alarminfo</servlet-name>
 		<servlet-class>pro.servlet.action.Alarminfo</servlet-class>
 	</servlet>
+			<servlet>
+		<description>This is the description of my J2EE component</description>
+		<display-name>This is the display name of my J2EE component</display-name>
+		<servlet-name>WeekReport</servlet-name>
+		<servlet-class>pro.servlet.action.WeekReport</servlet-class>
+	</servlet>
 
 
 
@@ -106,6 +112,10 @@
       <servlet-mapping>
     <servlet-name>Alarminfo</servlet-name>
     <url-pattern>/servlet/Alarminfo</url-pattern>
+  </servlet-mapping>
+      <servlet-mapping>
+    <servlet-name>WeekReport</servlet-name>
+    <url-pattern>/servlet/WeekReport</url-pattern>
   </servlet-mapping>
 <listener> 
 <listener-class>pro.servlet.action.ContextListener</listener-class> 
