--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -66,25 +66,24 @@
 		<servlet-name>WeekReport</servlet-name>
 		<servlet-class>pro.servlet.action.WeekReport</servlet-class>
 	</servlet>
-
-
-  <servlet>
-  	<description>This is the description of my J2EE component</description>
-	<display-name>This is the display name of my J2EE component</display-name>
-    <servlet-name>GetDangerousCars</servlet-name>
-    <servlet-class>pro.servlet.action.GetDangerousCars</servlet-class>
-  </servlet>
-  <servlet>
-  	<description>This is the description of my J2EE component</description>
-	<display-name>This is the display name of my J2EE component</display-name>
-    <servlet-name>YearReport</servlet-name>
-    <servlet-class>pro.servlet.action.YearReport</servlet-class>
-  </servlet>
-
-
-
-
-
+				<servlet>
+		<description>This is the description of my J2EE component</description>
+		<display-name>This is the display name of my J2EE component</display-name>
+		<servlet-name>GetDangerousCars</servlet-name>
+		<servlet-class>pro.servlet.action.GetDangerousCars</servlet-class>
+	</servlet>
+				<servlet>
+		<description>This is the description of my J2EE component</description>
+		<display-name>This is the display name of my J2EE component</display-name>
+		<servlet-name>YearReport</servlet-name>
+		<servlet-class>pro.servlet.action.YearReport</servlet-class>
+	</servlet>
+				<servlet>
+		<description>This is the description of my J2EE component</description>
+		<display-name>This is the display name of my J2EE component</display-name>
+		<servlet-name>MonthReport</servlet-name>
+		<servlet-class>pro.servlet.action.MonthReport</servlet-class>
+	</servlet>
 
 
 
@@ -121,35 +120,31 @@
     <servlet-name>WMReport</servlet-name>
     <url-pattern>/servlet/WMReport</url-pattern>
   </servlet-mapping>
-   <servlet-mapping>
-    <servlet-name>DayReport</servlet-name>
-    <url-pattern>/servlet/DayReport</url-pattern>
-  </servlet-mapping>
     <servlet-mapping>
     <servlet-name>Blacklist</servlet-name>
     <url-pattern>/servlet/Blacklist</url-pattern>
   </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>GetDangerousCars</servlet-name>
-    <url-pattern>/servlet/GetDangerousCars</url-pattern>
-  </servlet-mapping>
-   <servlet-mapping>
-    <servlet-name>YearReport</servlet-name>
-    <url-pattern>/servlet/YearReport</url-pattern>
-  </servlet-mapping>
       <servlet-mapping>
     <servlet-name>Alarminfo</servlet-name>
     <url-pattern>/servlet/Alarminfo</url-pattern>
-<<<<<<< HEAD
   </servlet-mapping>
       <servlet-mapping>
     <servlet-name>WeekReport</servlet-name>
     <url-pattern>/servlet/WeekReport</url-pattern>
   </servlet-mapping>
-=======
+  		<servlet-mapping>
+      <servlet-name>WeekReport</servlet-name>
+    <url-pattern>/servlet/GetDangerousCars</url-pattern>
   </servlet-mapping>
- 
->>>>>>> e17481bd5114d1c0129765df3040187d4b11eacc
+   		<servlet-mapping>
+      <servlet-name>WeekReport</servlet-name>
+    <url-pattern>/servlet/YearReport</url-pattern>
+  </servlet-mapping>
+     		<servlet-mapping>
+      <servlet-name>MonthReport</servlet-name>
+    <url-pattern>/servlet/MonthReport</url-pattern>
+  </servlet-mapping>
+  
 <listener> 
 <listener-class>pro.servlet.action.ContextListener</listener-class> 
 </listener> 
