--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -84,7 +84,12 @@
 		<servlet-name>MonthReport</servlet-name>
 		<servlet-class>pro.servlet.action.MonthReport</servlet-class>
 	</servlet>
-
+				<servlet>
+		<description>This is the description of my J2EE component</description>
+		<display-name>This is the display name of my J2EE component</display-name>
+		<servlet-name>GetRealTimeReportJSON</servlet-name>
+		<servlet-class>pro.servlet.action.GetRealTimeReportJSON</servlet-class>
+	</servlet>
 
 
 
@@ -144,7 +149,14 @@
       <servlet-name>MonthReport</servlet-name>
     <url-pattern>/servlet/MonthReport</url-pattern>
   </servlet-mapping>
-  
+       		<servlet-mapping>
+      <servlet-name>GetRealTimeReportJSON</servlet-name>
+    <url-pattern>/servlet/GetRealTimeReportJSON</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+        <servlet-name>DayReport</servlet-name>
+    <url-pattern>/servlet/DayReport</url-pattern>
+  </servlet-mapping>
 <listener> 
 <listener-class>pro.servlet.action.ContextListener</listener-class> 
 </listener> 
